--- a/JapanGames2/JapanGames2/PageSudoku.xaml
+++ b/JapanGames2/JapanGames2/PageSudoku.xaml
@@ -2,135 +2,111 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="JapanGames2.PageSudoku"
-             Title="PageSudokuClassic"
-             StyleClass="bgFilled">
+             Title="PageSudoku"
+             BackgroundColor="{StaticResource Color_BGFiller}">
 
-    <StackLayout >
-        <Label Text="Решим судоку!!! :)" 
-                   HorizontalTextAlignment="Center" 
-                   TextColor="Black" 
-                   FontSize="20"
-                   FontAttributes="Bold"
-                   InputTransparent="True"
-                   />
-                    
-            <StackLayout>
+    <StackLayout>
 
-                <AbsoluteLayout  HorizontalOptions="Center">
+        <Label x:Name="debugLabel" Text="x" />
 
-                    <Frame BackgroundColor="Black" 
-                       Padding="1" 
-                       CornerRadius="0" 
-                       HasShadow="True">
+        <FlexLayout
+            Direction="Row"
+            AlignItems="Center"
+            JustifyContent="SpaceAround"
+            Margin="0, 5"
+            Padding="0"
+            >
 
-                        <Grid x:Name="gridMain"
-                        ColumnSpacing="0"
-                        RowSpacing="0"
-                        Padding="0"
-                        HorizontalOptions="Center">
+            <Button 
+                Style="{StaticResource PageSudoku_Button}" 
+                Clicked="OnClickedButtonNewGame" 
+                Text="New Game" HeightRequest="40" WidthRequest="150"/>
 
-                            <Grid.RowDefinitions>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                            </Grid.RowDefinitions>
+            <Frame 
+                BackgroundColor="{StaticResource Color_BGFiller}" 
+                BorderColor="{StaticResource Color_MenuText}" 
+                HasShadow="True"  CornerRadius="5" 
+                HeightRequest="40" WidthRequest="80" 
+                Padding="0" Margin="0">
 
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition/>
-                                <ColumnDefinition/>
-                                <ColumnDefinition/>
-                            </Grid.ColumnDefinitions>
+                <Label 
+                    Style="{StaticResource PageSudoku_MainGrid}" 
+                    TextColor="{StaticResource Color_MenuText}" 
+                    x:Name="timerLabel" Text="12:34"/>
 
-                        </Grid>
+            </Frame>
+            
+        </FlexLayout>
 
-                    </Frame>
+        <AbsoluteLayout HorizontalOptions="Center">
 
-                </AbsoluteLayout>
+            <Frame BackgroundColor="{StaticResource Color_MenuText}" 
+                   Margin="0, 5"
+                   Padding="1" 
+                   CornerRadius="0" 
+                   HasShadow="True">
 
-                <AbsoluteLayout HorizontalOptions="Center">
-
-                <Frame BackgroundColor="Black" 
-                       Padding="2" 
-                       CornerRadius="0" 
-                       HasShadow="True">
-
-                    <Frame BackgroundColor="Gray" 
-                           Padding="0" 
-                           CornerRadius="0" 
-                           HasShadow="false">
-
-                        <Grid x:Name="gridNumPad" 
-                          ColumnSpacing="1" 
-                          RowSpacing="1" 
-                          Padding="0" 
-                          HorizontalOptions="Center">
-
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="40"/>
-                            </Grid.RowDefinitions>
-
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="40"/>
-                                <ColumnDefinition Width="40"/>
-                                <ColumnDefinition Width="40"/>
-                                <ColumnDefinition Width="40"/>
-                                <ColumnDefinition Width="40"/>
-                                <ColumnDefinition Width="40"/>
-                                <ColumnDefinition Width="40"/>
-                                <ColumnDefinition Width="40"/>
-                                <ColumnDefinition Width="40"/>
-                            </Grid.ColumnDefinitions>
-
-                        </Grid>
-
-                    </Frame>
-
-                </Frame>
-
-                </AbsoluteLayout>
-
-                <FlexLayout Direction="Row"
-                            AlignItems="Center"
-                            JustifyContent="SpaceBetween"
-                            Padding="0">
-
-                    <Button StyleClass="mainMenuButton, bgMarked" Clicked="OnClickedButtonClear" Text="Clear" HeightRequest="40" WidthRequest="70"/>
-                    <Button StyleClass="mainMenuButton, bgMarked" Text="About" HeightRequest="40" WidthRequest="70"/>
-                    <Button StyleClass="mainMenuButton, bgMarked" Clicked="OnClickedButtonHint"  Text="Hint!" HeightRequest="40" WidthRequest="70" />
-                    <Button StyleClass="mainMenuButton, bgMarked" Clicked="OnClickedButtonSolveIt" Text="Solve it!" HeightRequest="40" WidthRequest="100"/>
-                    
-                </FlexLayout>
-
-                <Grid x:Name="gridOfCandidate" 
+                <Grid x:Name="gridMain"
                       ColumnSpacing="0"
                       RowSpacing="0"
+                      Padding="0"
                       HorizontalOptions="Center">
-                    
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+
                 </Grid>
 
-            </StackLayout>
+            </Frame>
 
-        <Label Text="Горячая пеfрезагрузка" FontSize="Title" Padding="0,0,0,0" x:Name="Label1"/>
-        
-            <Label FontSize="8" Padding="0,0,0,0">
-                
-                <Label.FormattedText>
-                    
-                    <FormattedString>
-                        
-                        <FormattedString.Spans>
-                            
-                            <Span Text="Learn more at "/>
-                            
-                            <Span Text="https://aka.ms/xamarin-quickstart" FontAttributes="Bold"/>
-                        
-                        </FormattedString.Spans>
-                    
-                    </FormattedString>
-               
-                </Label.FormattedText>
-            
-            </Label>
+        </AbsoluteLayout>
+
+        <Grid x:Name="gridNumPad"
+              Margin="0, 5"
+              ColumnSpacing="1" 
+              RowSpacing="1" 
+              Padding="0" 
+              HorizontalOptions="Center">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="40"/>
+            </Grid.RowDefinitions>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="40"/>
+                <ColumnDefinition Width="40"/>
+                <ColumnDefinition Width="40"/>
+                <ColumnDefinition Width="40"/>
+                <ColumnDefinition Width="40"/>
+                <ColumnDefinition Width="40"/>
+                <ColumnDefinition Width="40"/>
+                <ColumnDefinition Width="40"/>
+                <ColumnDefinition Width="40"/>
+            </Grid.ColumnDefinitions>
+
+        </Grid>
+
+        <FlexLayout 
+            Direction="Row"
+            AlignItems="Center"
+            JustifyContent="SpaceAround"
+            Margin="0, 5"
+            Padding="0">
+
+            <Button Style="{StaticResource PageSudoku_Button}" Clicked="OnClickedButtonClear" Text="Clear" HeightRequest="40" WidthRequest="90"/>
+            <Button Style="{StaticResource PageSudoku_Button}" Clicked="OnClickedButtonHint"  Text="Hint!" HeightRequest="40" WidthRequest="90" />
+            <Button Style="{StaticResource PageSudoku_Button}" Clicked="OnClickedButtonSolveIt" Text="Solve it!" HeightRequest="40" WidthRequest="120"/>
+
+        </FlexLayout>
 
     </StackLayout>
 
