--- a/JapanGames2/JapanGames2/PageMenuMain.xaml
+++ b/JapanGames2/JapanGames2/PageMenuMain.xaml
@@ -8,6 +8,7 @@
     <ContentPage.Content>
         <StackLayout>
             <Label 
+                x:Name="welcomeLabel"
                 Text="Welcome to JapCrossApp"
                 VerticalOptions="Center" 
                 HorizontalOptions="CenterAndExpand" 
